syntax = "proto3";

package pudicitia.identity;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "pudicitia.common/grpc/types.proto";

option csharp_namespace = "Pudicitia.Enterprise.Gateway";

service Authorization {
  rpc PaginateUsers (PaginateUsersRequest) returns (PaginateUsersResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateUser (CreateUserRequest) returns (pudicitia.common.GuidRequired);
  rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);

  rpc ListRoles (ListRolesRequest) returns (pudicitia.common.ListNamedEntityResponse);
  rpc PaginateRoles (PaginateRolesRequest) returns (PaginateRolesResponse);
  rpc GetRole (GetRoleRequest) returns (GetRoleResponse);
  rpc CreateRole (CreateRoleRequest) returns (pudicitia.common.GuidRequired);
  rpc UpdateRole (UpdateRoleRequest) returns (google.protobuf.Empty);
  rpc DeleteRole (DeleteRoleRequest) returns (google.protobuf.Empty);

  rpc ListPermissions (ListPermissionsRequest) returns (pudicitia.common.ListNamedEntityResponse);
  rpc PaginatePermissions (PaginatePermissionsRequest) returns (PaginatePermissionsResponse);
  rpc GetPermission (GetPermissionRequest) returns (GetPermissionResponse);
  rpc CreatePermission (CreatePermissionRequest) returns (pudicitia.common.GuidRequired);
  rpc UpdatePermission (UpdatePermissionRequest) returns (google.protobuf.Empty);
  rpc DeletePermission (DeletePermissionRequest) returns (google.protobuf.Empty);
}

message PaginateUsersRequest {
  pudicitia.common.PageRequired page = 1;
}

message PaginateUsersResponse {
  pudicitia.common.PageRequired page = 1;
  repeated User items = 2;

  message User {
    pudicitia.common.GuidRequired id = 1;
    string user_name = 2;
    string name = 3;
    string display_name = 4;
    bool is_enabled = 5;
  }
}

message GetUserRequest {
  pudicitia.common.GuidRequired id = 1;
}

message GetUserResponse {
  pudicitia.common.GuidRequired id = 1;
  string user_name = 2;
  string name = 3;
  string display_name = 4;
  bool is_enabled = 5;
  repeated pudicitia.common.GuidRequired role_ids = 6;
}

message CreateUserRequest {
  string user_name = 1;
  string password = 2;
  string name = 3;
  string display_name = 4;
  bool is_enabled = 5;
  repeated pudicitia.common.GuidRequired role_ids = 6;
}

message UpdateUserRequest {
  pudicitia.common.GuidRequired id = 1;
  google.protobuf.StringValue password = 2;
  string name = 3;
  string display_name = 4;
  bool is_enabled = 5;
  repeated pudicitia.common.GuidRequired role_ids = 6;
}

message DeleteUserRequest {
  pudicitia.common.GuidRequired id = 1;
}

message ListRolesRequest {
}

message PaginateRolesRequest {
  pudicitia.common.PageRequired page = 1;
}

message PaginateRolesResponse {
  pudicitia.common.PageRequired page = 1;
  repeated Role items = 2;

  message Role {
    pudicitia.common.GuidRequired id = 1;
    string name = 2;
    bool is_enabled = 3;
  }
}

message GetRoleRequest {
  pudicitia.common.GuidRequired id = 1;
}

message GetRoleResponse {
  pudicitia.common.GuidRequired id = 1;
  string name = 2;
  bool is_enabled = 3;
  repeated pudicitia.common.GuidRequired permission_ids = 4;
}

message CreateRoleRequest {
  string name = 1;
  bool is_enabled = 2;
  repeated pudicitia.common.GuidRequired permission_ids = 3;
}

message UpdateRoleRequest {
  pudicitia.common.GuidRequired id = 1;
  string name = 2;
  bool is_enabled = 3;
  repeated pudicitia.common.GuidRequired permission_ids = 4;
}

message DeleteRoleRequest {
  pudicitia.common.GuidRequired id = 1;
}

message ListPermissionsRequest {
}

message PaginatePermissionsRequest {
  pudicitia.common.PageRequired page = 1;
}

message PaginatePermissionsResponse {
  pudicitia.common.PageRequired page = 1;
  repeated Permission items = 2;

  message Permission {
    pudicitia.common.GuidRequired id = 1;
    string code = 2;
    string name = 3;
    bool is_enabled = 4;
  }
}

message GetPermissionRequest {
  pudicitia.common.GuidRequired id = 1;
}

message GetPermissionResponse {
  pudicitia.common.GuidRequired id = 1;
  string code = 2;
  string name = 3;
  google.protobuf.StringValue description = 4;
  bool is_enabled = 5;
}

message CreatePermissionRequest {
  string code = 1;
  string name = 2;
  google.protobuf.StringValue description = 3;
  bool is_enabled = 4;
}

message UpdatePermissionRequest {
  pudicitia.common.GuidRequired id = 1;
  string code = 2;
  string name = 3;
  google.protobuf.StringValue description = 4;
  bool is_enabled = 5;
}

message DeletePermissionRequest {
  pudicitia.common.GuidRequired id = 1;
}
